# http_server

./: .clang-format  .clang-tidy  .gitmodules  .rgignore  CMakeLists.txt  kserver.cfg  trace
html_css/: extensions  faq.html  home.html
html_css/CV/: cv.css  cv.html
html_css/Notes/: note.css  note.html  notes.js
include/: connection.hpp  connections_list.hpp  dummy_server.hpp  epoll_connection.hpp  linux_connection.hpp  listener.hpp  logger.hpp  poller.hpp  request.hpp  response.hpp  serialized_interface.hpp  server.hpp  startup.hpp
libs/: CMakeLists.txt
libs/backend_service/: CMakeLists.txt
libs/backend_service/include/: backend_service.hpp
libs/backend_service/src/: backend_service.cpp
libs/data_service/: CMakeLists.txt  schema.sql
libs/data_service/include/: data_service.hpp  database.hpp  database_interface.hpp  pq_database.hpp
libs/data_service/src/: database.cpp  pq_connection.hpp  pq_database.cpp  pq_utils.hpp
libs/data_service/tests/: database_test.cpp  pq_utils_test.cpp
libs/frontend_service/: CMakeLists.txt
libs/frontend_service/include/: frontend_service.hpp  resource_observer.hpp
libs/frontend_service/src/: frontend_service.cpp  resource_observer.cpp
libs/logical_controller/: CMakeLists.txt
libs/logical_controller/include/: logical_controller.hpp
libs/logical_controller/src/: logical_controller.cpp
libs/new_server/: CMakeLists.txt
libs/new_server/include/: linux_connection.hpp  server.hpp
libs/new_server/src/: client_connection.cpp  linux_connection.cpp
libs/permissions_controller/: CMakeLists.txt
libs/permissions_controller/include/: bot_communicator.hpp  bot_messages.hpp  permissions_controller.hpp
libs/permissions_controller/src/: bot_communicator.cpp  permissions_controller.cpp
libs/poller/: CMakeLists.txt
libs/poller/include/: abstract_serialized.hpp  linux_connection.hpp  poller.hpp
libs/poller/src/: linux_connection.cpp  poller.cpp
libs/request/: CMakeLists.txt
libs/request/include/: first_line_parser.hpp  headers_builder.hpp  log_request.hpp  method_parser.hpp  request.hpp  request_builder.hpp
libs/request/src/: first_line_parser.cpp  headers_builder.cpp  log_request.cpp  method_parser.cpp  request.cpp  request_builder.cpp
libs/response/: CMakeLists.txt
libs/response/include/: common_responses.hpp  response.hpp
libs/response/src/: common_responses.cpp  response.cpp
libs/server/: CMakeLists.txt
libs/server/include/: backend_interface.hpp  client_connection.hpp  epoll_connection.hpp  linux_connection.hpp  listener.hpp  server.hpp
libs/server/src/: client_connection.cpp  epoll_connection.cpp  linux_connection.cpp  listener.cpp  server.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/: functor_utils.hpp  logger.hpp  ptr_utils.hpp
libs/utils/src/: logger.cpp
src/: another_main.cpp  connection.cpp  epoll_connection.cpp  linux_connection.cpp  main.cpp  request.cpp  response.cpp  server.cpp  startup.cpp
tests/: CMakeLists.txt
tests/data_service/: CMakeLists.txt  database_test.cpp
tests/logical_controller/: CMakeLists.txt  echo_http_server.cpp  tester.py
tests/unit_tests/: CMakeLists.txt  connections_list_test.cpp
tests/unit_tests/frontend_service/: CMakeLists.txt  collect_index_test.cpp  frontend_service_test.cpp  resource_observer_test.cpp
tests/unit_tests/permissions_controller/: CMakeLists.txt  bot_communicator_test.cpp
tests/unit_tests/poller/: CMakeLists.txt  linux_connection_test.cpp  poller_test.cpp
tests/unit_tests/request/: CMakeLists.txt  first_line_parser_test.cpp  headers_builder_test.cpp  method_parser_test.cpp  request_builder_test.cpp
tests/unit_tests/request/example_requests/: post_request.txt
tests/unit_tests/server/: CMakeLists.txt
